test/extended/testdata/router/ingresscontroller-syslog.yaml
apiVersion: template.openshift.io/v1
kind: Template
objects:
- apiVersion: operator.openshift.io/v1
  kind: IngressController
  metadata:
    name: ${NAME}
    namespace: ${NAMESPACE}
  spec:
    defaultCertificate:
      name: ${DEFAULT_CERT}
    domain: ${DOMAIN}
    endpointPublishingStrategy:
      type: NodePortService
    replicas: 1
    logging:
      access:
        destination:
          type: Syslog
          syslog:
            address: 1.2.3.4
            port: 514
parameters:
- name: NAME
- name: NAMESPACE
  value: openshift-ingress-operator
- name: DEFAULT_CERT
  value: router-certs-default
- name: DOMAIN
