test/extended/testdata/router/ingresscontroller-tuning.yaml
apiVersion: template.openshift.io/v1
kind: Template
objects:
- apiVersion: operator.openshift.io/v1
  kind: IngressController
  metadata:
    name: ${NAME}
    namespace: ${NAMESPACE}
  spec:
    defaultCertificate:
      name: ${DEFAULT_CERT}
    tuningOptions: 
      headerBufferBytes: 16385
      headerBufferMaxRewriteBytes: 4097
      threadCount: 4
    domain: ${DOMAIN}
    replicas: 1
    endpointPublishingStrategy:
      type: NodePortService
    nodePlacement:
      nodeSelector:
        matchLabels:
          beta.kubernetes.io/os: linux
      tolerations:
      - effect: NoSchedule
        operator: Exists
parameters:
- name: NAME
- name: NAMESPACE
  value: openshift-ingress-operator
- name: DEFAULT_CERT
  value: router-certs-default
- name: DOMAIN
