test/extended/testdata/router/operatorgroup.yaml
apiVersion: operators.coreos.com/v1
kind: OperatorGroup
metadata:
  name: extdns-operatorgroup
  namespace: external-dns-operator
spec:
  targetNamespaces:
  - external-dns-operator
