test/extended/testdata/router/sample-aws-rt.yaml
apiVersion: externaldns.olm.openshift.io/v1alpha1
kind: ExternalDNS
metadata:
  name: sample-aws-rt
spec:
  domains:
  - filterType: Include
    matchType: Exact
    name: qe.devcluster.openshift.com
  provider:
    type: AWS
  source:
    openshiftRouteOptions:
      routerName: default
    type: OpenShiftRoute
    labelFilter:
      matchLabels:
        external-dns.mydomain.org/publish: "yes"
