test/extended/testdata/router/sample-azure-rt.yaml
apiVersion: externaldns.olm.openshift.io/v1alpha1
kind: ExternalDNS
metadata:
  name: sample-azure-rt
spec:
  provider:
    type: Azure
  source:
    labelFilter:
      matchLabels:
        external-dns.mydomain.org/publish: "yes"
    openshiftRouteOptions:
      routerName: default
    type: OpenShiftRoute
  zones:
  - "mydomain.org"
