test/extended/testdata/router/sample-gcp-svc.yaml
apiVersion: externaldns.olm.openshift.io/v1alpha1
kind: ExternalDNS
metadata:
  name: sample-gcp-svc
spec:
  provider:
    type: GCP
  source:
    labelFilter:
      matchLabels:
        external-dns.mydomain.org/publish: "yes"
    service:
      serviceType:
        - LoadBalancer
        - ClusterIP
    type: Service
    fqdnTemplate:
    - "{{.Name}}.mydomain.org"
  zones:
  - "mydomain.org"
