test/extended/testdata/router/subscription.yaml
apiVersion: operators.coreos.com/v1alpha1
kind: Subscription
metadata:
  name: external-dns-operator
  namespace: external-dns-operator
spec:
  channel: alpha
  installPlanApproval: Automatic
  name: external-dns-operator
  source: qe-app-registry
  sourceNamespace: openshift-marketplace
  startingCSV: external-dns-operator.v0.1.2
